--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
 <title>Hello World!</title>
 <link rel="stylesheet" href="bluestyle.css">
-</head>
+</title>
 <body>
-
 <h1>Hello world this is me that is you!</h1>
 <p>This is the first file in my new Git Repo.</p>
 <p>A new line in our file!</p>
@@ -14,14 +13,5 @@
 <head>
 <title>Hello World!</title>
 <link rel="stylesheet" href="bluestyle.css">
-</head>
-<body>
-
-<h1>Hello world!</h1>
-<div><img src="img_hello_world.jpg" alt="Hello World from Space" style="width:100%;max-width:640px"></div>
-<p>This is the first file in my new Git Repo.</p>
-<p>This line is here to show how merging works.</p>
-<div><img src="img_hello_git.jpg" alt="Hello Git" style="width:100%;max-width:640px"></div>
-
 </body>
 </html>
