--- a/index.html
+++ b/index.html
@@ -4,14 +4,12 @@
 <title>Hello World!</title>
 <link rel="stylesheet" href="bluestyle.css">
 </title>
+</head>
 <body>
 <h1>Hello world this is me that is you!</h1>
 <p>This is the first file in my new Git Repo.</p>
 <p>A new line in our file!</p>
-<!DOCTYPE html>
-<html>
-<head>
+  <p>Another new line in file!</p>
 <title>Hello World!</title>
-<link rel="stylesheet" href="bluestyle.css">
 </body>
 </html>
